Fix scrollbars on windows devices

--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -6,7 +6,8 @@ raqn-hero {
   --hero-grid-template-columns: var(--scope-hero-columns, 1fr);
   --hero-hero-order: 0;
   --hero-padding-block: var(--scope-hero-padding-block, 40px);
-
+  
+  display: grid;
   background: var(--hero-background);
   color: var(--hero-color);
   align-items: center;
